// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StudentPage Renders a consistent snapshot when empty 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        autocomplete="off"
        class="flex flex-col gap-3"
      >
        <input
          autocomplete="false"
          name="hidden"
          style="display: none;"
          type="text"
        />
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="firstName"
            >
              First Name
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <input
                  aria-labelledby="firstName"
                  class="input w-full"
                  data-cy="input-firstName"
                  data-testid="input-firstName"
                  name="firstName"
                  type="text"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="firstName"
            >
              Last Name
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <input
                  aria-labelledby="lastName"
                  class="input w-full"
                  data-cy="input-lastName"
                  data-testid="input-lastName"
                  name="lastName"
                  type="text"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="firstName"
            >
              Grade Level
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <input
                  aria-labelledby="gradeLevel"
                  class="input w-full"
                  data-cy="input-gradeLevel"
                  data-testid="input-gradeLevel"
                  min="1"
                  name="gradeLevel"
                  type="number"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="firstName"
            >
              Areas of need
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <div
                  class="w-full creatable-areasOfNeed css-b62m3t-container"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-2-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                    role="log"
                  />
                  <div
                    class=" css-189lesj-control"
                  >
                    <div
                      class=" css-1fdsijx-ValueContainer"
                    >
                      <div
                        class=" css-1jqq78o-placeholder"
                        id="react-select-2-placeholder"
                      >
                        Select...
                      </div>
                      <div
                        class=" css-qbdosj-Input"
                        data-value=""
                      >
                        <input
                          aria-activedescendant=""
                          aria-autocomplete="list"
                          aria-describedby="react-select-2-placeholder"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class=""
                          id="react-select-2-input"
                          role="combobox"
                          spellcheck="false"
                          style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class=" css-1u9des2-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class=" css-1xc3v61-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div>
                    <input
                      name="areasOfNeed"
                      type="hidden"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="firstName"
            >
              Famliy
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <div
                  class="w-full creatable-family css-b62m3t-container"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-3-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                    role="log"
                  />
                  <div
                    class=" css-189lesj-control"
                  >
                    <div
                      class=" css-1fdsijx-ValueContainer"
                    >
                      <div
                        class=" css-1jqq78o-placeholder"
                        id="react-select-3-placeholder"
                      >
                        Select...
                      </div>
                      <div
                        class=" css-qbdosj-Input"
                        data-value=""
                      >
                        <input
                          aria-activedescendant=""
                          aria-autocomplete="list"
                          aria-describedby="react-select-3-placeholder"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class=""
                          id="react-select-3-input"
                          role="combobox"
                          spellcheck="false"
                          style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class=" css-1u9des2-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class=" css-1xc3v61-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <input
                    name="family"
                    type="hidden"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="firstName"
            >
              Notes
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <textarea
                  aria-labelledby="notes"
                  class="textarea w-full"
                  data-cy="textarea-notes"
                  data-testid="textarea-notes"
                  name="notes"
                />
              </div>
            </div>
          </div>
        </div>
        <div>
          <button
            class="text-sm font-semibold px-3 py-2 flex flex-row justify-center rounded-md shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 bg-indigo-200  text-white"
            data-cy="submit-form"
            disabled=""
            role="submit"
            type="submit"
          >
            <span>
              Add
            </span>
          </button>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      autocomplete="off"
      class="flex flex-col gap-3"
    >
      <input
        autocomplete="false"
        name="hidden"
        style="display: none;"
        type="text"
      />
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="firstName"
          >
            First Name
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <input
                aria-labelledby="firstName"
                class="input w-full"
                data-cy="input-firstName"
                data-testid="input-firstName"
                name="firstName"
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="firstName"
          >
            Last Name
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <input
                aria-labelledby="lastName"
                class="input w-full"
                data-cy="input-lastName"
                data-testid="input-lastName"
                name="lastName"
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="firstName"
          >
            Grade Level
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <input
                aria-labelledby="gradeLevel"
                class="input w-full"
                data-cy="input-gradeLevel"
                data-testid="input-gradeLevel"
                min="1"
                name="gradeLevel"
                type="number"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="firstName"
          >
            Areas of need
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <div
                class="w-full creatable-areasOfNeed css-b62m3t-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-2-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                  role="log"
                />
                <div
                  class=" css-189lesj-control"
                >
                  <div
                    class=" css-1fdsijx-ValueContainer"
                  >
                    <div
                      class=" css-1jqq78o-placeholder"
                      id="react-select-2-placeholder"
                    >
                      Select...
                    </div>
                    <div
                      class=" css-qbdosj-Input"
                      data-value=""
                    >
                      <input
                        aria-activedescendant=""
                        aria-autocomplete="list"
                        aria-describedby="react-select-2-placeholder"
                        aria-expanded="false"
                        aria-haspopup="true"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        class=""
                        id="react-select-2-input"
                        role="combobox"
                        spellcheck="false"
                        style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class=" css-1u9des2-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class=" css-1xc3v61-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div>
                  <input
                    name="areasOfNeed"
                    type="hidden"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="firstName"
          >
            Famliy
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <div
                class="w-full creatable-family css-b62m3t-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-3-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                  role="log"
                />
                <div
                  class=" css-189lesj-control"
                >
                  <div
                    class=" css-1fdsijx-ValueContainer"
                  >
                    <div
                      class=" css-1jqq78o-placeholder"
                      id="react-select-3-placeholder"
                    >
                      Select...
                    </div>
                    <div
                      class=" css-qbdosj-Input"
                      data-value=""
                    >
                      <input
                        aria-activedescendant=""
                        aria-autocomplete="list"
                        aria-describedby="react-select-3-placeholder"
                        aria-expanded="false"
                        aria-haspopup="true"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        class=""
                        id="react-select-3-input"
                        role="combobox"
                        spellcheck="false"
                        style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class=" css-1u9des2-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class=" css-1xc3v61-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <input
                  name="family"
                  type="hidden"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="firstName"
          >
            Notes
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <textarea
                aria-labelledby="notes"
                class="textarea w-full"
                data-cy="textarea-notes"
                data-testid="textarea-notes"
                name="notes"
              />
            </div>
          </div>
        </div>
      </div>
      <div>
        <button
          class="text-sm font-semibold px-3 py-2 flex flex-row justify-center rounded-md shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 bg-indigo-200  text-white"
          data-cy="submit-form"
          disabled=""
          role="submit"
          type="submit"
        >
          <span>
            Add
          </span>
        </button>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`StudentPage Renders a consistent snapshot when prefilled with data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        autocomplete="off"
        class="flex flex-col gap-3"
      >
        <input
          autocomplete="false"
          name="hidden"
          style="display: none;"
          type="text"
        />
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="firstName"
            >
              First Name
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <input
                  aria-labelledby="firstName"
                  class="input w-full"
                  data-cy="input-firstName"
                  data-testid="input-firstName"
                  name="firstName"
                  type="text"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="firstName"
            >
              Last Name
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <input
                  aria-labelledby="lastName"
                  class="input w-full"
                  data-cy="input-lastName"
                  data-testid="input-lastName"
                  name="lastName"
                  type="text"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="firstName"
            >
              Grade Level
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <input
                  aria-labelledby="gradeLevel"
                  class="input w-full"
                  data-cy="input-gradeLevel"
                  data-testid="input-gradeLevel"
                  min="1"
                  name="gradeLevel"
                  type="number"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="firstName"
            >
              Areas of need
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <div
                  class="w-full creatable-areasOfNeed css-b62m3t-container"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-4-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                    role="log"
                  />
                  <div
                    class=" css-189lesj-control"
                  >
                    <div
                      class=" css-1fdsijx-ValueContainer"
                    >
                      <div
                        class=" css-1jqq78o-placeholder"
                        id="react-select-4-placeholder"
                      >
                        Select...
                      </div>
                      <div
                        class=" css-qbdosj-Input"
                        data-value=""
                      >
                        <input
                          aria-activedescendant=""
                          aria-autocomplete="list"
                          aria-describedby="react-select-4-placeholder"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class=""
                          id="react-select-4-input"
                          role="combobox"
                          spellcheck="false"
                          style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class=" css-1u9des2-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class=" css-1xc3v61-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div>
                    <input
                      name="areasOfNeed"
                      type="hidden"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="firstName"
            >
              Famliy
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <div
                  class="w-full creatable-family css-b62m3t-container"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-5-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                    role="log"
                  />
                  <div
                    class=" css-189lesj-control"
                  >
                    <div
                      class=" css-1fdsijx-ValueContainer"
                    >
                      <div
                        class=" css-1jqq78o-placeholder"
                        id="react-select-5-placeholder"
                      >
                        Select...
                      </div>
                      <div
                        class=" css-qbdosj-Input"
                        data-value=""
                      >
                        <input
                          aria-activedescendant=""
                          aria-autocomplete="list"
                          aria-describedby="react-select-5-placeholder"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class=""
                          id="react-select-5-input"
                          role="combobox"
                          spellcheck="false"
                          style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class=" css-1u9des2-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class=" css-1xc3v61-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <input
                    name="family"
                    type="hidden"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="firstName"
            >
              Notes
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <textarea
                  aria-labelledby="notes"
                  class="textarea w-full"
                  data-cy="textarea-notes"
                  data-testid="textarea-notes"
                  name="notes"
                />
              </div>
            </div>
          </div>
        </div>
        <div>
          <button
            class="text-sm font-semibold px-3 py-2 flex flex-row justify-center rounded-md shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 bg-indigo-200  text-white"
            data-cy="submit-form"
            disabled=""
            role="submit"
            type="submit"
          >
            <span>
              Add
            </span>
          </button>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      autocomplete="off"
      class="flex flex-col gap-3"
    >
      <input
        autocomplete="false"
        name="hidden"
        style="display: none;"
        type="text"
      />
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="firstName"
          >
            First Name
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <input
                aria-labelledby="firstName"
                class="input w-full"
                data-cy="input-firstName"
                data-testid="input-firstName"
                name="firstName"
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="firstName"
          >
            Last Name
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <input
                aria-labelledby="lastName"
                class="input w-full"
                data-cy="input-lastName"
                data-testid="input-lastName"
                name="lastName"
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="firstName"
          >
            Grade Level
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <input
                aria-labelledby="gradeLevel"
                class="input w-full"
                data-cy="input-gradeLevel"
                data-testid="input-gradeLevel"
                min="1"
                name="gradeLevel"
                type="number"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="firstName"
          >
            Areas of need
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <div
                class="w-full creatable-areasOfNeed css-b62m3t-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-4-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                  role="log"
                />
                <div
                  class=" css-189lesj-control"
                >
                  <div
                    class=" css-1fdsijx-ValueContainer"
                  >
                    <div
                      class=" css-1jqq78o-placeholder"
                      id="react-select-4-placeholder"
                    >
                      Select...
                    </div>
                    <div
                      class=" css-qbdosj-Input"
                      data-value=""
                    >
                      <input
                        aria-activedescendant=""
                        aria-autocomplete="list"
                        aria-describedby="react-select-4-placeholder"
                        aria-expanded="false"
                        aria-haspopup="true"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        class=""
                        id="react-select-4-input"
                        role="combobox"
                        spellcheck="false"
                        style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class=" css-1u9des2-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class=" css-1xc3v61-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div>
                  <input
                    name="areasOfNeed"
                    type="hidden"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="firstName"
          >
            Famliy
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <div
                class="w-full creatable-family css-b62m3t-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-5-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                  role="log"
                />
                <div
                  class=" css-189lesj-control"
                >
                  <div
                    class=" css-1fdsijx-ValueContainer"
                  >
                    <div
                      class=" css-1jqq78o-placeholder"
                      id="react-select-5-placeholder"
                    >
                      Select...
                    </div>
                    <div
                      class=" css-qbdosj-Input"
                      data-value=""
                    >
                      <input
                        aria-activedescendant=""
                        aria-autocomplete="list"
                        aria-describedby="react-select-5-placeholder"
                        aria-expanded="false"
                        aria-haspopup="true"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        class=""
                        id="react-select-5-input"
                        role="combobox"
                        spellcheck="false"
                        style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class=" css-1u9des2-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class=" css-1xc3v61-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <input
                  name="family"
                  type="hidden"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="firstName"
          >
            Notes
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <textarea
                aria-labelledby="notes"
                class="textarea w-full"
                data-cy="textarea-notes"
                data-testid="textarea-notes"
                name="notes"
              />
            </div>
          </div>
        </div>
      </div>
      <div>
        <button
          class="text-sm font-semibold px-3 py-2 flex flex-row justify-center rounded-md shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 bg-indigo-200  text-white"
          data-cy="submit-form"
          disabled=""
          role="submit"
          type="submit"
        >
          <span>
            Add
          </span>
        </button>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`StudentPage Renders without any families or areas of need present 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        autocomplete="off"
        class="flex flex-col gap-3"
      >
        <input
          autocomplete="false"
          name="hidden"
          style="display: none;"
          type="text"
        />
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="firstName"
            >
              First Name
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <input
                  aria-labelledby="firstName"
                  class="input w-full"
                  data-cy="input-firstName"
                  data-testid="input-firstName"
                  name="firstName"
                  type="text"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="firstName"
            >
              Last Name
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <input
                  aria-labelledby="lastName"
                  class="input w-full"
                  data-cy="input-lastName"
                  data-testid="input-lastName"
                  name="lastName"
                  type="text"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="firstName"
            >
              Grade Level
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <input
                  aria-labelledby="gradeLevel"
                  class="input w-full"
                  data-cy="input-gradeLevel"
                  data-testid="input-gradeLevel"
                  min="1"
                  name="gradeLevel"
                  type="number"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="firstName"
            >
              Areas of need
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <div
                  class="w-full creatable-areasOfNeed css-b62m3t-container"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-6-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                    role="log"
                  />
                  <div
                    class=" css-189lesj-control"
                  >
                    <div
                      class=" css-1fdsijx-ValueContainer"
                    >
                      <div
                        class=" css-1jqq78o-placeholder"
                        id="react-select-6-placeholder"
                      >
                        Select...
                      </div>
                      <div
                        class=" css-qbdosj-Input"
                        data-value=""
                      >
                        <input
                          aria-activedescendant=""
                          aria-autocomplete="list"
                          aria-describedby="react-select-6-placeholder"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class=""
                          id="react-select-6-input"
                          role="combobox"
                          spellcheck="false"
                          style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class=" css-1u9des2-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class=" css-1xc3v61-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div>
                    <input
                      name="areasOfNeed"
                      type="hidden"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="firstName"
            >
              Famliy
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <div
                  class="w-full creatable-family css-b62m3t-container"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-7-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                    role="log"
                  />
                  <div
                    class=" css-189lesj-control"
                  >
                    <div
                      class=" css-1fdsijx-ValueContainer"
                    >
                      <div
                        class=" css-1jqq78o-placeholder"
                        id="react-select-7-placeholder"
                      >
                        Select...
                      </div>
                      <div
                        class=" css-qbdosj-Input"
                        data-value=""
                      >
                        <input
                          aria-activedescendant=""
                          aria-autocomplete="list"
                          aria-describedby="react-select-7-placeholder"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class=""
                          id="react-select-7-input"
                          role="combobox"
                          spellcheck="false"
                          style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class=" css-1u9des2-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class=" css-1xc3v61-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <input
                    name="family"
                    type="hidden"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="firstName"
            >
              Notes
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <textarea
                  aria-labelledby="notes"
                  class="textarea w-full"
                  data-cy="textarea-notes"
                  data-testid="textarea-notes"
                  name="notes"
                />
              </div>
            </div>
          </div>
        </div>
        <div>
          <button
            class="text-sm font-semibold px-3 py-2 flex flex-row justify-center rounded-md shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 bg-indigo-200  text-white"
            data-cy="submit-form"
            disabled=""
            role="submit"
            type="submit"
          >
            <span>
              Add
            </span>
          </button>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      autocomplete="off"
      class="flex flex-col gap-3"
    >
      <input
        autocomplete="false"
        name="hidden"
        style="display: none;"
        type="text"
      />
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="firstName"
          >
            First Name
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <input
                aria-labelledby="firstName"
                class="input w-full"
                data-cy="input-firstName"
                data-testid="input-firstName"
                name="firstName"
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="firstName"
          >
            Last Name
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <input
                aria-labelledby="lastName"
                class="input w-full"
                data-cy="input-lastName"
                data-testid="input-lastName"
                name="lastName"
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="firstName"
          >
            Grade Level
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <input
                aria-labelledby="gradeLevel"
                class="input w-full"
                data-cy="input-gradeLevel"
                data-testid="input-gradeLevel"
                min="1"
                name="gradeLevel"
                type="number"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="firstName"
          >
            Areas of need
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <div
                class="w-full creatable-areasOfNeed css-b62m3t-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-6-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                  role="log"
                />
                <div
                  class=" css-189lesj-control"
                >
                  <div
                    class=" css-1fdsijx-ValueContainer"
                  >
                    <div
                      class=" css-1jqq78o-placeholder"
                      id="react-select-6-placeholder"
                    >
                      Select...
                    </div>
                    <div
                      class=" css-qbdosj-Input"
                      data-value=""
                    >
                      <input
                        aria-activedescendant=""
                        aria-autocomplete="list"
                        aria-describedby="react-select-6-placeholder"
                        aria-expanded="false"
                        aria-haspopup="true"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        class=""
                        id="react-select-6-input"
                        role="combobox"
                        spellcheck="false"
                        style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class=" css-1u9des2-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class=" css-1xc3v61-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div>
                  <input
                    name="areasOfNeed"
                    type="hidden"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="firstName"
          >
            Famliy
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <div
                class="w-full creatable-family css-b62m3t-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-7-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                  role="log"
                />
                <div
                  class=" css-189lesj-control"
                >
                  <div
                    class=" css-1fdsijx-ValueContainer"
                  >
                    <div
                      class=" css-1jqq78o-placeholder"
                      id="react-select-7-placeholder"
                    >
                      Select...
                    </div>
                    <div
                      class=" css-qbdosj-Input"
                      data-value=""
                    >
                      <input
                        aria-activedescendant=""
                        aria-autocomplete="list"
                        aria-describedby="react-select-7-placeholder"
                        aria-expanded="false"
                        aria-haspopup="true"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        class=""
                        id="react-select-7-input"
                        role="combobox"
                        spellcheck="false"
                        style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class=" css-1u9des2-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class=" css-1xc3v61-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <input
                  name="family"
                  type="hidden"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="firstName"
          >
            Notes
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <textarea
                aria-labelledby="notes"
                class="textarea w-full"
                data-cy="textarea-notes"
                data-testid="textarea-notes"
                name="notes"
              />
            </div>
          </div>
        </div>
      </div>
      <div>
        <button
          class="text-sm font-semibold px-3 py-2 flex flex-row justify-center rounded-md shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 bg-indigo-200  text-white"
          data-cy="submit-form"
          disabled=""
          role="submit"
          type="submit"
        >
          <span>
            Add
          </span>
        </button>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
